# PI-Gest-o-de-Obras

./: .gitignore  README.md
back-end/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_evidence_analysis.py
back-end/alembic/: __init__.py  env.py  script.py.mako
back-end/alembic/versions/: 20241107_01_initial_schema.py  20241124_01_add_projects_evidences.py  20241124_02_add_ifc_models.py  20241124_03_add_ifc_elements_comparisons.py  20241124_04_add_error_message.py  __init__.py
back-end/app/: .env.example  __init__.py  main.py
back-end/app/core/: config.py
back-end/app/domain/: __init__.py
back-end/app/domain/entities/: __init__.py  analysis.py
back-end/app/domain/repositories/: __init__.py  project_analysis.py
back-end/app/infrastructure/: __init__.py
back-end/app/infrastructure/db/: __init__.py  base.py  mappers.py  models.py  session.py
back-end/app/infrastructure/db/repositories/: project_analysis.py
back-end/app/infrastructure/services/: __init__.py  evidence_processor.py  exceptions.py  ifc_processor.py  openai_schemas.py  openai_service.py  pdf_generator.py  storage.py
back-end/app/interfaces/: __init__.py
back-end/app/interfaces/http/: __init__.py  api.py  dependencies.py  schemas.py
back-end/app/use_cases/: __init__.py  analyze_project.py  exceptions.py  query_analyses.py
back-end/tests/: test_analyze_project_use_case.py
front-end/: .eslintignore  SETUP.md  USAGE_EXAMPLES.tsx  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
front-end/src/: middleware.ts
(+43 files in other folders)
