[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metro-bim-backend"
version = "0.1.0"
description = "Backend FastAPI para análise de BIM e imagens"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "openai>=1.53",
  "aiomysql>=0.2",
  "python-multipart>=0.0.9",
  "cryptography>=43.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

